[gd_scene load_steps=4 format=3 uid="uid://bahiwly305vcs"]

[ext_resource type="Script" path="res://enemy/Caster.gd" id="1_6wgf1"]
[ext_resource type="Script" path="res://common/Health.gd" id="2_thdlg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2qb2"]
radius = 9.5

[node name="Caster" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_6wgf1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("CircleShape2D_u2qb2")

[node name="CastTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PathfindingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Health" type="Node" parent="."]
script = ExtResource("2_thdlg")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_pathfinding_timer_timeout"]
[connection signal="death" from="Health" to="." method="_on_death"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
